# BS_EventDetection

./: .gitignore  README.md  crnn_spotter.pt  log_mel.py  main.py  pyproject.toml  requirements.txt  sed_evaluator.py
analysis/: explore_tsne.py
configs/: default.yaml  spotter.yaml
gut_sed/: filters.py  io.py  metrics.py  stats.py  viz.py  windowing.py
models/: bs_clf.joblib  crnn.py
scripts/: build_coverage.py  dataset_stats.py  fft_segment_analysis.py  infer_spotter.py  inspect_filter.py  train_spotter.py  welch_psd_stuff.py
src/bsed/: __init__.py  classify.py  data.py  features.py  frames.py  infer.py  io.py  labeling.py  labels.py  melspec.py  metrics.py  pipeline.py  postprocess.py  preprocessing.py  splits.py  train.py  tsne_features.py  viz.py
src/bsed/models/: crnn.py
tests/: test_crnn_forward.py
